--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     },
     "private": true,
     "scripts": {
-        "dev": "turbo run dev",
-        "build": "turbo run build",
+        "pregenerate": "echo [gitbook] CWD=$(pwd)",
+        "generate": "bash -lc \"$(git rev-parse --show-toplevel)/scripts/generate.sh\"",
+        "dev": "next dev",
+        "build": "next build",
         "clean-deps": "rm -rf node_modules && rm -rf packages/*/node_modules",
-        "typecheck": "turbo run typecheck",
+        "typecheck": "tsc -p tsconfig.json",
         "format": "biome check --write ./",
         "format:check": "biome check --diagnostic-level=error ./",
         "unit": "turbo run unit",
