--- a/packages/gitbook/package.json
+++ b/packages/gitbook/package.json
@@ -4,11 +4,11 @@
     "private": true,
     "dependencies": {
         "@gitbook/api": "catalog:",
-        "@gitbook/expr": "workspace:*",
         "@gitbook/browser-types": "workspace:*",
         "@gitbook/cache-tags": "workspace:*",
         "@gitbook/colors": "workspace:*",
         "@gitbook/emoji-codepoints": "workspace:*",
+        "@gitbook/expr": "workspace:*",
         "@gitbook/fonts": "workspace:*",
         "@gitbook/icons": "workspace:*",
         "@gitbook/openapi-parser": "workspace:*",
@@ -40,6 +40,7 @@
         "jsontoxml": "^1.0.1",
         "jwt-decode": "^4.0.0",
         "katex": "^0.16.9",
+        "lucide-react": "^0.544.0",
         "mathjax": "^3.2.2",
         "mcp-handler": "^1.0.2",
         "mdast-util-from-markdown": "^2.0.2",
